再開発ページの「ご協力ください」セクションをリファクタリングし、レイアウトを改善しました。テキストと画像の配置を見直し、可読性を向上させるためにCSSクラスを追加しました。

--- a/saikaihatu.html
+++ b/saikaihatu.html
@@ -342,22 +342,29 @@
       <section class="cooperation-section py-20">
         <div class="container mx-auto px-4">
           <h2>ご協力ください</h2>
-          <div
-            style="
-              display: flex;
-              align-items: center;
-              gap: 1.5em;
-              flex-wrap: wrap;
-            "
-          >
-            <img
-              src="gazou_saikaihatu/image_staff.png"
-              alt="担当者のイラスト"
-              style="max-width: 120px"
-            />
-            <p style="margin: 0">
-              近隣の方々を含めた判断が必要となるため、皆様のご意向の確認にご協力ください。ご協力にあたっては、近隣の皆様と概ねのスケジュールを合わせる必要がございます。
-            </p>
+          <div class="max-w-4xl mx-auto">
+            <div
+              class="flex flex-col md:flex-row items-center md:items-stretch gap-8"
+            >
+              <!-- テキスト部分 -->
+              <div
+                class="prose prose-lg text-gray-700 leading-relaxed space-y-6 flex-1"
+              >
+                <p>
+                  近隣の方々を含めた判断が必要となるため、皆様のご意向の確認にご協力ください。ご協力にあたっては、近隣の皆様と概ねのスケジュールを合わせる必要がございます。
+                </p>
+              </div>
+              <!-- 画像部分 -->
+              <div class="flex-1 flex justify-center md:justify-end h-full">
+                <div class="max-w-sm w-full">
+                  <img
+                    src="gazou_saikaihatu/image_staff.png"
+                    alt="担当者のイラスト"
+                    class="rounded-lg shadow-lg max-h-[450px] max-w-sm w-full h-auto object-contain"
+                  />
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
