再開発ページの各セクションの見出しにマージンを追加し、レイアウトの一貫性を向上させました。これにより、可読性が向上しました。

--- a/saikaihatu.html
+++ b/saikaihatu.html
@@ -211,7 +211,7 @@
       <!-- ご売却検討の際よくあるご質問 -->
       <section class="faq-section py-20">
         <div class="container mx-auto px-4">
-          <h2>ご売却検討の際よくあるご質問</h2>
+          <h2 class="mb-8">ご売却検討の際よくあるご質問</h2>
 
           <div class="faq-item">
             <h3 class="faq-question">売却スケジュールは？</h3>
@@ -255,7 +255,7 @@
       <!-- 再開発とは -->
       <section class="py-20">
         <div class="container mx-auto px-4">
-          <h2>再開発とは</h2>
+          <h2 class="mb-8">再開発とは</h2>
           <p>
             複数の土地を一団の土地にする事で、街や建造物を時代にあった形に改修し都市の機能性や居住性を向上させ使い勝手や資産価値を高める事です。
           </p>
@@ -310,7 +310,7 @@
       <!-- 再開発全体の流れ -->
       <section class="py-20">
         <div class="container mx-auto px-4">
-          <h2>再開発全体の流れ</h2>
+          <h2 class="mb-8">再開発全体の流れ</h2>
           <div class="process-flow">
             <div class="process-step">
               <h3>皆様のご意向確認</h3>
@@ -341,7 +341,7 @@
       <!-- ご協力ください -->
       <section class="cooperation-section py-20">
         <div class="container mx-auto px-4">
-          <h2>ご協力ください</h2>
+          <h2 class="mb-8">ご協力ください</h2>
           <div class="max-w-4xl mx-auto">
             <div
               class="flex flex-col md:flex-row items-center md:items-stretch gap-8"
@@ -372,7 +372,7 @@
       <!-- 再開発を行う事で得られるメリット -->
       <section class="py-20">
         <div class="container mx-auto px-4">
-          <h2>再開発を行う事で得られるメリット</h2>
+          <h2 class="mb-8">再開発を行う事で得られるメリット</h2>
           <ul>
             <li>
               建物の耐震化・安全性の向上により、防災機能を高め治安の良い街づくりに貢献する事が出来ます。
@@ -387,7 +387,7 @@
       <!-- 街全体としてのメリット -->
       <section class="py-20">
         <div class="container mx-auto px-4">
-          <h2>街全体としてのメリット</h2>
+          <h2 class="mb-8">街全体としてのメリット</h2>
           <div
             style="
               display: flex;
@@ -413,7 +413,7 @@
       <!-- 再開発での土地売却で得られるメリット事例 -->
       <section class="py-20">
         <div class="container mx-auto px-4">
-          <h2>再開発での土地売却で得られるメリット事例</h2>
+          <h2 class="mb-8">再開発での土地売却で得られるメリット事例</h2>
 
           <div class="merit-case">
             <h3>相続発生後に親族で揉める事を防ぎたい。</h3>
