再開発ページの「街全体としてのメリット」セクションをリファクタリングし、テキストと画像の配置を改善しました。新しいレイアウトにより、可読性と視覚的な魅力が向上しました。

--- a/saikaihatu.html
+++ b/saikaihatu.html
@@ -388,23 +388,28 @@
       <section class="py-20">
         <div class="container mx-auto px-4">
           <h2 class="mb-8">街全体としてのメリット</h2>
-          <div
-            style="
-              display: flex;
-              align-items: center;
-              gap: 2em;
-              flex-wrap: wrap;
-            "
-          >
-            <img
-              src="gazou_saikaihatu/image_cityscape.png"
-              alt="街のイラスト"
-              style="max-width: 200px"
-            />
-            <div>
-              <p>
-                一体開発により、地域環境の改善、防災環境の改善、付加価値の向上を見込みます。その付加価値を地権者の皆様に還元することができます。
-              </p>
+          <div class="max-w-4xl mx-auto">
+            <div
+              class="flex flex-col md:flex-row items-center md:items-stretch gap-8"
+            >
+              <!-- テキスト部分 -->
+              <div
+                class="prose prose-lg text-gray-700 leading-relaxed space-y-6 flex-1"
+              >
+                <p>
+                  一体開発により、地域環境の改善、防災環境の改善、付加価値の向上を見込みます。その付加価値を地権者の皆様に還元することができます。
+                </p>
+              </div>
+              <!-- 画像部分 -->
+              <div class="flex-1 flex justify-center md:justify-end h-full">
+                <div class="max-w-sm w-full">
+                  <img
+                    src="gazou_saikaihatu/image_cityscape.png"
+                    alt="街のイラスト"
+                    class="rounded-lg shadow-lg max-h-[450px] max-w-sm w-full h-auto object-contain"
+                  />
+                </div>
+              </div>
             </div>
           </div>
         </div>
