再開発ページの「相続対策」と「地震対策」セクションをリファクタリングし、テキストと画像の配置を改善しました。新しいレイアウトにより、可読性と視覚的な魅力が向上しました。

--- a/saikaihatu.html
+++ b/saikaihatu.html
@@ -420,45 +420,63 @@
         <div class="container mx-auto px-4">
           <h2 class="mb-8">再開発での土地売却で得られるメリット事例</h2>
 
-          <div class="merit-case">
-            <h3>相続発生後に親族で揉める事を防ぎたい。</h3>
-            <div
-              style="
-                display: flex;
-                align-items: center;
-                gap: 1.5em;
-                flex-wrap: wrap;
-              "
-            >
-              <img
-                src="gazou_saikaihatu/image_inheritance.png"
-                alt="相続のイメージ"
-                style="max-width: 120px"
-              />
-              <p>
-                不動産を分けられないので、相続発生前に売却する事で現金化して相続発生後に分配出来ます。
-              </p>
+          <!-- 相続対策 -->
+          <div class="mb-12">
+            <h3 class="text-2xl font-bold text-gray-800 mb-8">
+              相続発生後に親族で揉める事を防ぎたい。
+            </h3>
+            <div class="max-w-4xl mx-auto">
+              <div
+                class="flex flex-col md:flex-row items-center md:items-stretch gap-8"
+              >
+                <!-- テキスト部分 -->
+                <div
+                  class="prose prose-lg text-gray-700 leading-relaxed space-y-6 flex-1"
+                >
+                  <p>
+                    不動産を分けられないので、相続発生前に売却する事で現金化して相続発生後に分配出来ます。
+                  </p>
+                </div>
+                <!-- 画像部分 -->
+                <div class="flex-1 flex justify-center md:justify-end h-full">
+                  <div class="max-w-sm w-full">
+                    <img
+                      src="gazou_saikaihatu/image_inheritance.png"
+                      alt="相続のイメージ"
+                      class="rounded-lg shadow-lg max-h-[450px] max-w-sm w-full h-auto object-contain"
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
-          <div class="merit-case">
-            <h3>地震対策</h3>
-            <div
-              style="
-                display: flex;
-                align-items: center;
-                gap: 1.5em;
-                flex-wrap: wrap;
-              "
-            >
-              <img
-                src="gazou_saikaihatu/image_earthquake.png"
-                alt="地震のイメージ"
-                style="max-width: 120px"
-              />
-              <p>
-                ご本人、ご家族、ご入居者のために建物を耐震補強する、建て替えるかなど費用をかけて地震対策をする必要がありません。
-              </p>
+          <!-- 地震対策 -->
+          <div class="mb-12">
+            <h3 class="text-2xl font-bold text-gray-800 mb-8">地震対策</h3>
+            <div class="max-w-4xl mx-auto">
+              <div
+                class="flex flex-col md:flex-row items-center md:items-stretch gap-8"
+              >
+                <!-- テキスト部分 -->
+                <div
+                  class="prose prose-lg text-gray-700 leading-relaxed space-y-6 flex-1"
+                >
+                  <p>
+                    ご本人、ご家族、ご入居者のために建物を耐震補強する、建て替えるかなど費用をかけて地震対策をする必要がありません。
+                  </p>
+                </div>
+                <!-- 画像部分 -->
+                <div class="flex-1 flex justify-center md:justify-end h-full">
+                  <div class="max-w-sm w-full">
+                    <img
+                      src="gazou_saikaihatu/image_earthquake.png"
+                      alt="地震のイメージ"
+                      class="rounded-lg shadow-lg max-h-[450px] max-w-sm w-full h-auto object-contain"
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
