再開発ページの「相続対策」と「地震対策」セクションの見出しを中央揃えにし、テキスト部分の配置を改善しました。これにより、全体の可読性と視覚的な一貫性が向上しました。

--- a/saikaihatu.html
+++ b/saikaihatu.html
@@ -422,23 +422,15 @@
 
           <!-- 相続対策 -->
           <div class="mb-12">
-            <h3 class="text-2xl font-bold text-gray-800 mb-8">
+            <h3 class="text-2xl font-bold text-gray-800 mb-8 text-center">
               相続発生後に親族で揉める事を防ぎたい。
             </h3>
             <div class="max-w-4xl mx-auto">
               <div
                 class="flex flex-col md:flex-row items-center md:items-stretch gap-8"
               >
-                <!-- テキスト部分 -->
-                <div
-                  class="prose prose-lg text-gray-700 leading-relaxed space-y-6 flex-1"
-                >
-                  <p>
-                    不動産を分けられないので、相続発生前に売却する事で現金化して相続発生後に分配出来ます。
-                  </p>
-                </div>
                 <!-- 画像部分 -->
-                <div class="flex-1 flex justify-center md:justify-end h-full">
+                <div class="flex-1 flex justify-center md:justify-start h-full">
                   <div class="max-w-sm w-full">
                     <img
                       src="gazou_saikaihatu/image_inheritance.png"
@@ -447,13 +439,23 @@
                     />
                   </div>
                 </div>
+                <!-- テキスト部分 -->
+                <div
+                  class="prose prose-lg text-gray-700 leading-relaxed space-y-6 flex-1"
+                >
+                  <p>
+                    不動産を分けられないので、相続発生前に売却する事で現金化して相続発生後に分配出来ます。
+                  </p>
+                </div>
               </div>
             </div>
           </div>
 
           <!-- 地震対策 -->
           <div class="mb-12">
-            <h3 class="text-2xl font-bold text-gray-800 mb-8">地震対策</h3>
+            <h3 class="text-2xl font-bold text-gray-800 mb-8 text-center">
+              地震対策
+            </h3>
             <div class="max-w-4xl mx-auto">
               <div
                 class="flex flex-col md:flex-row items-center md:items-stretch gap-8"
