再開発ページのレイアウトを改善し、オフィスと神田明神に関する新しいカードを追加しました。これにより、情報の視覚的な提示が向上し、ユーザー体験が向上しました。

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
           オフィスギャラリー
         </h2>
         <div class="max-w-6xl mx-auto">
-          <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+          <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <!-- カード1 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
               <a
@@ -720,7 +720,7 @@
               </div>
             </div>
 
-            <!-- カード4 -->
+            <!-- カード4 ロビ君 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
               <a
                 href="gazou/office_robi_01.jpg"
@@ -743,6 +743,58 @@
               <div class="p-6">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">ロビ君</h3>
                 <p class="text-gray-600">コミュニケーションロボット</p>
+              </div>
+            </div>
+
+            <!-- カード5 オフィス -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+              <a
+                href="gazou/K2_office_3.jpg"
+                class="glightbox"
+                data-description="オフィス：お気軽にお越しください。"
+              >
+                <div class="flex">
+                  <img
+                    src="gazou/K2_office_3.jpg"
+                    alt="オフィス1"
+                    class="w-1/2 h-64 object-cover"
+                  />
+                  <img
+                    src="gazou/K2_office_4.jpg"
+                    alt="オフィス2"
+                    class="w-1/2 h-64 object-cover"
+                  />
+                </div>
+              </a>
+              <div class="p-6">
+                <h3 class="text-xl font-bold text-gray-800 mb-2">オフィス</h3>
+                <p class="text-gray-600">お気軽にお越しください。</p>
+              </div>
+            </div>
+
+            <!-- カード6 神田明神 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+              <a
+                href="gazou/K2_office_1.jpg"
+                class="glightbox"
+                data-description="神田明神：商いの神様が徒歩1分です。"
+              >
+                <div class="flex">
+                  <img
+                    src="gazou/K2_office_1.jpg"
+                    alt="神田明神1"
+                    class="w-1/2 h-64 object-cover"
+                  />
+                  <img
+                    src="gazou/K2_office_2.jpg"
+                    alt="神田明神2"
+                    class="w-1/2 h-64 object-cover"
+                  />
+                </div>
+              </a>
+              <div class="p-6">
+                <h3 class="text-xl font-bold text-gray-800 mb-2">神田明神</h3>
+                <p class="text-gray-600">商いの神様が徒歩1分です。</p>
               </div>
             </div>
           </div>
