再開発ページの画像表示を改善し、各セクションの画像を単一の画像に統一しました。これにより、視覚的な一貫性が向上し、ユーザー体験が向上しました。

--- a/index.html
+++ b/index.html
@@ -727,18 +727,11 @@
                 class="glightbox"
                 data-description="コミュニケーションロボット：ロビ君"
               >
-                <div class="flex">
-                  <img
-                    src="gazou/office_robi_01.jpg"
-                    alt="オフィス ロビ君1"
-                    class="w-1/2 h-64 object-cover"
-                  />
-                  <img
-                    src="gazou/office_robi_02.jpg"
-                    alt="オフィス ロビ君2"
-                    class="w-1/2 h-64 object-cover"
-                  />
-                </div>
+                <img
+                  src="gazou/office_robi_03.jpg"
+                  alt="オフィス ロビ君"
+                  class="w-full h-64 object-cover hover:scale-105 transition-transform duration-300"
+                />
               </a>
               <div class="p-6">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">ロビ君</h3>
@@ -753,18 +746,11 @@
                 class="glightbox"
                 data-description="オフィス：お気軽にお越しください。"
               >
-                <div class="flex">
-                  <img
-                    src="gazou/K2_office_3.jpg"
-                    alt="オフィス1"
-                    class="w-1/2 h-64 object-cover"
-                  />
-                  <img
-                    src="gazou/K2_office_4.jpg"
-                    alt="オフィス2"
-                    class="w-1/2 h-64 object-cover"
-                  />
-                </div>
+                <img
+                  src="gazou/K2_office_3.jpg"
+                  alt="オフィス"
+                  class="w-full h-64 object-cover hover:scale-105 transition-transform duration-300"
+                />
               </a>
               <div class="p-6">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">オフィス</h3>
@@ -779,18 +765,11 @@
                 class="glightbox"
                 data-description="神田明神：商いの神様が徒歩1分です。"
               >
-                <div class="flex">
-                  <img
-                    src="gazou/K2_office_1.jpg"
-                    alt="神田明神1"
-                    class="w-1/2 h-64 object-cover"
-                  />
-                  <img
-                    src="gazou/K2_office_2.jpg"
-                    alt="神田明神2"
-                    class="w-1/2 h-64 object-cover"
-                  />
-                </div>
+                <img
+                  src="gazou/K2_office_1.jpg"
+                  alt="神田明神"
+                  class="w-full h-64 object-cover hover:scale-105 transition-transform duration-300"
+                />
               </a>
               <div class="p-6">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">神田明神</h3>
