--- a/index.html
+++ b/index.html
@@ -725,6 +725,7 @@
               <a
                 href="gazou/office_robi_01.jpg"
                 class="glightbox"
+                data-gallery="robi-gallery"
                 data-description="コミュニケーションロボット：ロビ君"
               >
                 <img
@@ -733,6 +734,13 @@
                   class="w-full h-64 object-cover hover:scale-105 transition-transform duration-300"
                 />
               </a>
+              <a
+                href="gazou/office_robi_03.jpg"
+                class="glightbox"
+                data-gallery="robi-gallery"
+                data-description="コミュニケーションロボット：ロビ君"
+                style="display: none"
+              ></a>
               <div class="p-6">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">ロビ君</h3>
                 <p class="text-gray-600">コミュニケーションロボット</p>
@@ -744,6 +752,7 @@
               <a
                 href="gazou/K2_office_3.jpg"
                 class="glightbox"
+                data-gallery="office-gallery"
                 data-description="オフィス：お気軽にお越しください。"
               >
                 <img
@@ -752,6 +761,13 @@
                   class="w-full h-64 object-cover hover:scale-105 transition-transform duration-300"
                 />
               </a>
+              <a
+                href="gazou/K2_office_4.jpg"
+                class="glightbox"
+                data-gallery="office-gallery"
+                data-description="オフィス：お気軽にお越しください。"
+                style="display: none"
+              ></a>
               <div class="p-6">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">オフィス</h3>
                 <p class="text-gray-600">お気軽にお越しください。</p>
@@ -763,6 +779,7 @@
               <a
                 href="gazou/K2_office_1.jpg"
                 class="glightbox"
+                data-gallery="kanda-gallery"
                 data-description="神田明神：商いの神様が徒歩1分です。"
               >
                 <img
@@ -771,6 +788,13 @@
                   class="w-full h-64 object-cover hover:scale-105 transition-transform duration-300"
                 />
               </a>
+              <a
+                href="gazou/K2_office_2.jpg"
+                class="glightbox"
+                data-gallery="kanda-gallery"
+                data-description="神田明神：商いの神様が徒歩1分です。"
+                style="display: none"
+              ></a>
               <div class="p-6">
                 <h3 class="text-xl font-bold text-gray-800 mb-2">神田明神</h3>
                 <p class="text-gray-600">商いの神様が徒歩1分です。</p>
